--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
             <groupId>net.md-5</groupId>
             <artifactId>bungeecord-chat</artifactId>
             <version>1.16-R0.4</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
